Melhorias de performance e add funções de editar e remover Lembrete

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="lembretes">Lembretes</string>
     <string name="repetir">Repetir?</string>
     <string name="nenhum_lembrete_adicionado">Nenhum lembrete adicionado.</string>
+    <string name="editar">Editar</string>
+    <string name="deletar">Deletar</string>
 </resources>
